# learn-tree-sitter

./: .gitignore  CMakeLists.txt  Makefile  grammar.js  package-lock.json  package.json
src/: edit_parser.cc  test_parser.c  use_parser.cc
test/corpus/: basic.txt
